# Class_HangMan_Game

./: CMakeLists.txt
includes/: hangmangame.h  wordslib.h
resources/: dictionary.txt
src/: hangmangame.cpp  main.cpp  wordslib.cpp
